[package]
edition = "2021"
name = "bge-data-server"
version = "0.1.0"

[dependencies]
anyhow = "*"
axum = "0.7.5"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
itertools = "0.13"
memmap2 = "0.9"
rayon = "1.10"
serde = "1"
serde-jsonlines = "0.5"
tokio = { version = "1.38", features = ["full"] }
web-rwkv = "0.8.11"
